// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expense Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totaling 
    $7.35
  </h1>
</div>
`;

exports[`should correctly render Expense Summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
